--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel='stylesheet' href='styles.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' href='./styles.css'>
 </head>
 <body>
     <h1>Welcome to Rock Paper Scissors</h1>
     <p>Please open the console to play.</p>
+    <script src='./main.js'></script>
 </body>
 </html>
