--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <link rel='stylesheet' href='./styles.css'>
 </head>
 <body>
-    <h1>Welcome to Rock Paper Scissors</h1>
-    <p>Please open the console to play.</p>
+    <main id='main-section'>
+        <h1>Welcome to Rock Paper Scissors</h1>
+        <button id='rock-btn'>Rock</button>
+        <button id='paper-btn'>Paper</button>
+        <button id='scissors-btn'>Scissors</button>
+        <p>Please select a hand. Good luck!</p>
+        <div id='results-block'></div>
+    </main>
+    
     <script src='./main.js'></script>
 </body>
 </html>
