--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <main id='main-section'>
         <h1>Welcome to Rock Paper Scissors</h1>
-        <button id='rock-btn'>Rock</button>
-        <button id='paper-btn'>Paper</button>
-        <button id='scissors-btn'>Scissors</button>
-        <p>Please select a hand. Good luck!</p>
+        <div id='button-block'>
+            <button id='rock-btn'>Rock</button>
+            <button id='paper-btn'>Paper</button>
+            <button id='scissors-btn'>Scissors</button>
+        </div>
+        <p id='select'>Please select a hand. The victor is whichever player reaches 5 wins first. Good luck!</p>
         <div id='results-block'></div>
     </main>
     
